--- a/src/main/resources/templates/groupinfo/index.html
+++ b/src/main/resources/templates/groupinfo/index.html
@@ -30,6 +30,7 @@
     </style>
   </head>
   <body>
+    <a href="/home" class="back-button">← 戻る</a>
     <div class="container-fluid p-0 d-flex">
       <main class="main-content container py-4">
         <!-- メッセージ -->
