--- a/src/main/resources/templates/groupcreate/index.html
+++ b/src/main/resources/templates/groupcreate/index.html
@@ -20,6 +20,7 @@
   </head>
 
   <body>
+    <a href="/home" class="back-button">← 戻る</a>
     <div class="group-create-container">
       <h1>グループ作成</h1>
 
